--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,7 @@ runs:
   image: 'Dockerfile'
   args:
     - ${{ inputs.token }}
+    - ${{ inputs.registry }}
 branding:
   icon: package
   color: orange
